# monitor-research-hidden-gems

./: .env.example  .gitignore  README.md  data.json  index.html  pyproject.toml
reports/dashboard/: data.json  index.html
reports/hidden-gems/: 20260526-213853-all.md  20260526-221515-all.md  20260527-041608-all.md  20260527-101729-all.md  20260527-122452-all.md  20260527-182556-all.md  20260528-002642-all.md  20260528-062729-all.md  20260528-122817-all.md  20260531-011209-all.md  20260531-071330-all.md  20260601-164728-all.md  20260601-224836-all.md  20260602-044949-all.md  20260602-105110-all.md  20260602-161139-all.md  20260602-221202-all.md  20260603-041254-all.md  20260603-101343-all.md  20260603-161439-all.md  20260603-221504-all.md  20260604-041527-all.md  20260604-101619-all.md  20260604-161640-all.md  20260604-221730-all.md  20260605-041752-all.md  20260605-101815-all.md  20260605-161837-all.md  20260605-221927-all.md  20260606-041950-all.md  20260606-102013-all.md  20260608-162402-all.md  20260608-222422-all.md  20260609-042447-all.md  20260609-102512-all.md  20260609-162537-all.md  20260609-222603-all.md  20260610-042626-all.md  20260610-102649-all.md  20260610-162727-all.md  (+33 more)
src/research_hidden_gems/: __init__.py  arxiv_client.py  cli.py  config.py  dashboard.py  embedding_signals.py  huggingface_daily.py  llm_judge.py  models.py  openalex.py  openreview.py  paths.py  pipeline.py  scoring.py  semantic_scholar.py  storage.py
tests/: test_arxiv_client.py  test_cli_git.py  test_dashboard.py  test_embedding_signals.py  test_env.py  test_llm_judge.py  test_models_config.py  test_openalex.py  test_paths.py  test_pipeline.py  test_scoring.py  test_storage.py
