[project]
name = "monitor-research-hidden-gems"
version = "0.1.0"
description = "Find under-the-radar research papers with transferable novel techniques."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Real semantic embeddings for the outlier-novelty + relevance signals.
# Without this, the tool falls back to dependency-free feature hashing.
embeddings = ["sentence-transformers>=2.2"]
# The LLM deep-judge stage (Anthropic and/or OpenAI). Without a usable provider
# (package + API key), ranking uses the heuristic + embedding signals only.
# The OpenAI SDK also powers the optional `embed_backend = "openai"` embeddings.
llm = ["anthropic>=0.40", "openai>=1.40"]
all = ["sentence-transformers>=2.2", "anthropic>=0.40", "openai>=1.40"]

[project.scripts]
hidden-gems = "research_hidden_gems.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_hidden_gems"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
